--- a/app/assets/styles/Global.scss
+++ b/app/assets/styles/Global.scss
@@ -35,13 +35,17 @@ $form-elem-radius: 3px;
         display:flex;
         flex-direction: column;
         align-items: space-evenly;
+        .form-field{
+            margin: 0 0 10px;
+            display: flex;
+            flex-direction: column;
         input{
+            margin: 0 0 5px;
             border:1px solid $theme-primary;
-            margin: 3px 0 10px;
             border-radius:$form-elem-radius;
             padding:$form-elem-padding;
             outline-color:$theme-secondary
-        }
+        }}
     }
 }
 
