auth and user context

--- a/app/assets/styles/Global.scss
+++ b/app/assets/styles/Global.scss
@@ -1,60 +1,5 @@
-$theme-primary: #125B9A;
-$theme-secondary: #0B8494;
-$theme-tertiary: #f05a66;
-$theme-accent: #FFBE98;
-$shadow-gray: #c0cfdf6b;
-$text-dark: #003285;
-$form-elem-padding: 5px 10px;
-$form-elem-radius: 3px;
-
-@mixin submitButton{
-    border-radius: $form-elem-radius;
-    background:$theme-primary;
-    color:white;
-    padding: $form-elem-padding;
-    padding-left: 25px;
-    padding-right:25px;
-    max-width: 300px;
-    text-transform: uppercase;
-    width:100%;
-    letter-spacing: 1px;
-    font-size:1.2rem;
-    font-weight:300;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-    &:hover{
-        background-color: $theme-tertiary;
-    }
-}
-
-@mixin card {
-    border-radius: 10px;
-    box-shadow: $shadow-gray 0 5px 20px;
-    padding:4%;
-    form{
-        display:flex;
-        flex-direction: column;
-        align-items: space-evenly;
-        .form-field{
-            margin: 0 0 10px;
-            display: flex;
-            flex-direction: column;
-        input{
-            margin: 0 0 5px;
-            border:1px solid $theme-primary;
-            border-radius:$form-elem-radius;
-            padding:$form-elem-padding;
-            outline-color:$theme-secondary
-        }}
-    }
-}
 
 body{
-    min-height: 100vh;
-    min-width: 100vw;
-    display:flex;
-    flex-direction: column;
-    justify-content: space-between;
     font-family: 'Montserrat',
         "Inter",
           "ui-sans-serif",
@@ -99,5 +44,12 @@ body{
             &:hover{
                 color: $theme-accent
             }
+          }
+          .page{
+            min-height: 100vh;
+            min-width: 100vw;
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
           }
 }
