--- a/app/assets/styles/Global.scss
+++ b/app/assets/styles/Global.scss
@@ -1,5 +1,6 @@
 
 body{
+  position:relative;
     font-family: 'Montserrat',
         "Inter",
           "ui-sans-serif",
@@ -45,11 +46,10 @@ body{
                 color: $theme-accent
             }
           }
-          .page{
+          .page-content{
             min-height: 100vh;
-            min-width: 100vw;
+            min-width: 100%;
             display:flex;
-            flex-direction: column;
-            justify-content: space-between;
+            
           }
 }
