--- a/app/assets/styles/_variables.scss
+++ b/app/assets/styles/_variables.scss
@@ -2,6 +2,7 @@ $theme-primary: #125B9A;
 $theme-secondary: #0B8494;
 $theme-tertiary: #f05a66;
 $theme-accent: #FFBE98;
+$theme-accent-light: #ffefe6;
 $shadow-gray: #c0cfdf6b;
 $text-dark: #003285;
 $form-elem-padding: 5px 10px;
