--- a/app/components/FormCard/FormCard.scss
+++ b/app/components/FormCard/FormCard.scss
@@ -1,6 +1,16 @@
 .form-card{
     @include card;
     button{
-        @include submitButton
+        @include submitButton;
+        &:disabled{
+            opacity:0.7;
+            &:hover{
+                background:$theme-primary;
+                opacity:0.7;
+            }
+        }
+        &.cancel{
+            @include linkButton;
+        }
     }
 }
